argocd/manifests/authentik/exposure/gateway-listener-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: vault
spec:
  listeners:
    - name: authentik-https
      protocol: HTTPS
      port: 443
      hostname: auth.j6js.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: authentik-tls
            kind: Secret
            namespace: authentik
      allowedRoutes:
        namespaces:
          from: All
